@@ -1,11 +1,7 @@
 package Psh::Joblist;
 
 use strict;
-use vars qw($VERSION);
-
-use Psh::Job;
-
-$VERSION = do { my @r = (q$Revision$ =~ /\d+/g); sprintf "%d."."%02d" x $#r, @r }; # must be all one line, for MakeMaker
+require Psh::Job;
 
 sub new {
 	my $class = shift;
