@@ -2,12 +2,9 @@
 package Psh::Parser;
 
 use strict;
-use vars qw($VERSION);
 
-use Psh::OS;
+require Psh::OS;
 use Psh::Util;
-
-$VERSION = do { my @r = (q$Revision$ =~ /\d+/g); sprintf "%d."."%02d" x $#r, @r }; # must be all one line, for MakeMaker
 
 my %perlq_hash = qw|' ' " " q( ) qw( ) qq( )|;
 
